--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "mineditor",
 	"version": "0.0.1",
+	"type": "module",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -14,32 +15,33 @@
 	"devDependencies": {
 		"@fontsource/poppins": "^5.0.8",
 		"@neoconfetti/svelte": "^1.0.0",
-		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-vercel": "^3.0.3",
-		"@sveltejs/kit": "^1.20.4",
-		"@types/cookie": "^0.5.1",
-		"@typescript-eslint/eslint-plugin": "^5.45.0",
-		"@typescript-eslint/parser": "^5.45.0",
-		"autoprefixer": "^10.4.15",
-		"eslint": "^8.28.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-svelte": "^2.30.0",
-		"postcss": "^8.4.28",
-		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.10.1",
-		"svelte": "^4.0.5",
-		"svelte-check": "^3.4.3",
+		"@sveltejs/kit": "^1.25.0",
+		"@types/cookie": "^0.5.2",
+		"@typescript-eslint/eslint-plugin": "^6.7.2",
+		"@typescript-eslint/parser": "^6.7.2",
+		"autoprefixer": "^10.4.16",
+		"eslint": "^8.49.0",
+		"eslint-config-prettier": "^9.0.0",
+		"eslint-plugin-svelte": "^2.33.2",
+		"postcss": "^8.4.30",
+		"postcss-nesting": "^12.0.1",
+		"prettier": "^3.0.3",
+		"prettier-plugin-svelte": "^3.0.3",
+		"svelte": "^4.2.1",
+		"svelte-check": "^3.5.2",
+		"svelte-preprocess": "^5.0.4",
 		"tailwindcss": "^3.3.3",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"vite": "^4.4.2",
-		"vite-plugin-pwa": "^0.16.4",
-		"vitest": "^0.34.0"
+		"tslib": "^2.6.2",
+		"typescript": "^5.2.2",
+		"vite": "^4.4.9",
+		"vite-plugin-pwa": "^0.16.5",
+		"vitest": "^0.34.5"
 	},
-	"type": "module",
 	"dependencies": {
 		"emmet-monaco-es": "^5.3.0",
-		"monaco-editor": "^0.41.0",
+		"js-base64": "^3.7.5",
+		"monaco-editor": "^0.43.0",
 		"svelte-splitpanes": "^0.8.0"
 	}
 }
